<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="co.silvabr.fitnesstracker.BodyFatActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf_desc" />

        <EditText
            android:id="@+id/edit_bf_waist"
            style="@style/EditTextForm"
            android:hint="@string/waist" />

        <EditText
            android:id="@+id/edit_bf_neck"
            style="@style/EditTextForm"
            android:hint="@string/neck" />

        <EditText
            android:id="@+id/edit_bf_height"
            style="@style/EditTextForm"
            android:hint="@string/height"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_bf_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />
    </LinearLayout>

</ScrollView>

